Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Bug Fixes]
  - Declare ConstHashRef type.

  [Other]
  - Updated module metadata.

v0.1.1    2018-11-07 22:32:09+00:00 Europe/London
  [Bug Fixes]
  - Clean namespace.

  [Other]
  - Removed unnecessary prerequisite.

  - Added recommended prerequisite for Type::Tiny::XS and
    Ref::Util::XS.

  [Tests]
  - Fixed minimum prerequisite for Moo.

  - Fixed typo in test-case description.

v0.1.0    2018-11-07 07:31:02+00:00 Europe/London
  - Initial version released.